--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content">
 					<header>
-						<h2>Want to contact me ?</h2>
+						<h2>Contact Me</h2>
 							<br>
 						<ul>
 						<lo>Email : msnvdheeraj@gmail.com</li>
