--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 				<h1>Madagala Sai Naga Venkata Dheeraj Naidu</h1>
 				<nav>
 					<ul>
-						<li><a href="#intro">Intro</a></li>
-						<li><a href="#one">What I Do</a></li>
-						<li><a href="#two">Who I Am</a></li>
-						<li><a href="#edu">Education</a></li>
-						<li><a href="#work">My Work</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#intro"><b>Intro</b></a></li>
+						<li><a href="#one"><b>What I Do</b></a></li>
+						<li><a href="#two"><b>Who I Am</b></a></li>
+						<li><a href="#edu"><b>Education</b></a></li>
+						<li><a href="#work"><b>My Work</b></a></li>
+						<li><a href="#contact"><b>Contact</b></a></li>
 					</ul>
 				</nav>
 			</header>
@@ -52,7 +52,7 @@
 					<p>I've started to learn how to program. At present i'm learning Python . I'm more into the management sector. I 
 					aspire to become a technical manager.I'm in my second year of studies towards a bachelor's in Computer Sciences.I'm looking forward to do an MBA .</p>
 				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
+				<!--<a href="#two" class="button style2 down anchored">Next</a>-->
 			</section>
 
 		<!-- Two -->
@@ -63,7 +63,7 @@
 					</header>
 					<p>More of a hard worker.Computers and technology always fascinated me.<br> I like to learn new things.I like to work in teams.I watch a lot of standup comedy. Also listening to music is my favourite pastime.</p>
 				</div>
-				<a href="#edu" class="button style2 down anchored">Next</a>
+				<!--<a href="#edu" class="button style2 down anchored">Next</a> -->
 			</section>
 
 
