--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 				<!-- Icons -->
 					<ul class="actions">
 					<li><a href="https://www.linkedin.com/in/msnv-dheeraj-naidu-a80ab0133/" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/dheerajnaidu" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
+					<li><a href="#" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
 
 						<li><a href="https://www.facebook.com/msnvdheerajnaidu" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/dheerajnaidu_" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
