Page Speed Improvements
Images Compressed and Audio preload disabled

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 	<p align="left"><b><font size="6">Programming</font></b></p>
 						<br><p align="left"><b><font size="6">Music</font></b></p>
 						<p align="left">
-						Urban raxstar - <audio controls>
+						Urban raxstar - <audio controls preload="none">
   <source src="raxstar.mp3" type="audio/mpeg"></audio></p>
-  <p align="left">Cover (SGS) - <audio controls>
+  <p align="left">Cover (SGS) - <audio controls preload="none">
   <source src="sardar.mp3" type="audio/mpeg"></audio></p>
-  <p align="left">Cover (Yevadu) - <audio controls>
+  <p align="left">Cover (Yevadu) - <audio controls preload="none">
   <source src="oye.mp3" type="audio/mpeg"></audio></p>
-  <p align="left">Cover (DAARP) - <audio controls>
+  <p align="left">Cover (DAARP) - <audio controls preload="none">
   <source src="ajeeb.mp3" type="audio/mpeg"></audio></p>
 
 				</div>
