--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Madagala Sai Naga Venkata Dheeraj Naidu</h1>
+				<h1>MSNVDN</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro"><b>Intro</b></a></li>
