--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 					<li><a href="#" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
 
 						<li><a href="https://www.facebook.com/msnvdheeraj" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/msnvdheeraj/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.instagram.com/msnv_dheeraj/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 						
 
 						
