--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<ul>
 								<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
 								<li><a href="https://www.facebook.com/msnvdheeraj" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<!--<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li> -->
+								<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li> 
 								<li><a href="mailto:msnvdheeraj@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
