--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 							<ul>
 								<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
 								<li><a href="https://www.facebook.com/msnvdheeraj" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li> 
+								<li><a href="www.linkedin.com/in/msnvdheeraj" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li> 
 								<li><a href="mailto:msnvdheeraj@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
 
-				<!-- Footer -->
+				<!-- Footer -->www.linkedin.com/in/msnvdheeraj
 					<footer id="footer">
 					<!--	<span class="copyright">&copy; Untitled. Design: <a href=""></a>.</span>-->
 					</footer>
