--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>MSNV Dheeraj Naidu</h1>
-						<p>Engineer &nbsp;&bull;&nbsp; Designer &nbsp;&bull;&nbsp;Developer</p>
+						<p>Engineer &nbsp;&bull;&nbsp;Developer  &nbsp;&bull;&nbsp;Designer</p>
 						<nav>
 							<ul>
 								<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
