--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<head>
 		<title>Dheeraj Naidu - MSNVDN</title>
 		<meta charset="utf-8" />
+				<link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
+
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
