--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>MSNV Dheeraj Naidu</h1>
-						<p>Developer&nbsp;&bull;&nbsp;Designer</p>
+						<!--<p>Developer&nbsp;&bull;&nbsp;Designer</p>-->
+						
 						<nav>
 							<ul>
 								<li><a href="https://www.facebook.com/msnvdheeraj" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
