--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header">
 						<h1>MSNV Dheeraj Naidu</h1>
 						<!--<p>Developer&nbsp;&bull;&nbsp;Designer</p>-->
-						<p> website work underway </p>
+						<p> website work underway, have a good day! </p>
 						<nav>
 							<ul>
 							<!--	<li><a href="https://www.facebook.com/" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
