--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						<p> website work underway, have a good day! </p>
 						<nav>
 							<ul>
-							<!--	<li><a href="https://www.facebook.com/" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.linkedin.com/in/" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-								<li><a href="https://twitter.com/" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
+								<li><a href="https://www.facebook.com/msnvdheeraj" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.linkedin.com/in/dheerajnaidu" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://twitter.com/msnvdheeraj" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> 
 							</ul>
 						</nav>
 					</header>
