--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							</ul>
 						</nav>
 					</header>
-
+<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="dheerajnaidu"><a class="LI-simple-link" href='https://in.linkedin.com/in/dheerajnaidu?trk=profile-badge'>MSNV Dheeraj Naidu</a></div>
 				<!-- Footer -->
 					<footer id="footer">
 					<!--	<span class="copyright">&copy; Untitled. Design: <a href=""></a>.</span>-->
