--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
 			<div id="bg"></div>
 			<div id="overlay"></div>
 			<div id="main">
-
+<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="dheerajnaidu"><a class="LI-simple-link" href='https://in.linkedin.com/in/dheerajnaidu?trk=profile-badge'>MSNV Dheeraj Naidu</a></div>
 				<!-- Header -->
 					<header id="header">
 						<h1>MSNV Dheeraj Naidu</h1>
 						<!--<p>Developer&nbsp;&bull;&nbsp;Designer</p>-->
 						<p> website work underway, have a good day! </p>
-									<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="dheerajnaidu"><a class="LI-simple-link" href='https://in.linkedin.com/in/dheerajnaidu?trk=profile-badge'>MSNV Dheeraj Naidu</a></div>
 
 						<nav>
 							<ul>
