--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>MSNV Dheeraj Naidu</h1>
-						<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="dheerajnaidu"><a class="LI-simple-link" href='https://in.linkedin.com/in/dheerajnaidu?trk=profile-badge'>MSNV Dheeraj Naidu</a></div>
+						<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="dheerajnaidu"><a class="LI-simple-link" href='https://in.linkedin.com/in/dheerajnaidu?trk=profile-badge'>MSNV Dheeraj Naidu - Linkedin</a></div>
 
 						<!--<p>Developer&nbsp;&bull;&nbsp;Designer</p>-->
 						<p> website work underway, have a good day! </p>
@@ -27,7 +27,7 @@
 						<nav>
 							<ul>
 								<li><a href="https://www.facebook.com/msnvdheeraj" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.linkedin.com/in/dheerajnaidu" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<!--<li><a href="https://www.linkedin.com/in/dheerajnaidu" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>-->
 								<li><a href="https://twitter.com/msnvdheeraj" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> 
 							</ul>
 
