--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<title>Dheeraj Naidu | MSNV Dheeraj Naidu</title>
 		<meta charset="utf-8" />
 				<link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
-
+ <meta name="description" content="personal website of MSNV Dheeraj Naidu(Dheeraj Naidu)">
+  <meta name="keywords" content="Dheeraj Naidu,MSNV Dheeraj Naidu,MSNV,Dheeraj,Madagala,Naidu">
+  <meta name="author" content="MSNV Dheeraj Naidu">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -23,7 +25,7 @@
 
 						<!--<p>Developer&nbsp;&bull;&nbsp;Designer</p>-->
 						<p> website work underway, have a good day! </p>
-
+<p> To Connect:</p>
 						<nav>
 							<ul>
 								<li><a href="https://www.facebook.com/msnvdheeraj" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
