--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 						<!--<p>Developer&nbsp;&bull;&nbsp;Designer</p>-->
 						<p> website work underway, have a good day! </p>
-<h4> To Connect:</h4>
+<h3>Connect with Me:</h3>
 						<nav>
 							<ul>
 								<li><a href="https://www.facebook.com/msnvdheeraj" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
