--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<title>Dheeraj Naidu | MSNV Dheeraj Naidu</title>
 		<meta charset="utf-8" />
 				<link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
- <meta name="description" content="personal website of MSNV Dheeraj Naidu(Dheeraj Naidu)">
-  <meta name="keywords" content="Dheeraj Naidu,MSNV Dheeraj Naidu,MSNV,Dheeraj,Madagala,Naidu">
-  <meta name="author" content="MSNV Dheeraj Naidu">
+ <meta name="description" content="personal website of Dheeraj Naidu(MSNV Dheeraj Naidu)">
+  <meta name="keywords" content="Dheeraj,Naidu,Dheeraj Naidu,MSNV Dheeraj Naidu,MSNV,Madagala,">
+  <meta name="author" content="Dheeraj Naidu">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
