--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 				<link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
  <meta name="description" content="personal website of Dheeraj Naidu(MSNV Dheeraj Naidu)">
-  <meta name="keywords" content="Dheeraj,Naidu,Dheeraj Naidu,MSNV Dheeraj Naidu,MSNV,Madagala,">
+  <meta name="keywords" content="Dheeraj,Naidu,Dheeraj Naidu,MSNV,MSNV Dheeraj Naidu,Madagala">
   <meta name="author" content="Dheeraj Naidu">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
