--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 								<li><a href="https://www.linkedin.com/in/dheerajnaidu" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://twitter.com/msnvdheeraj" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> 
 								<li><a href="https://www.quora.com/profile/Dheeraj-Naidu-12" target="_blank" class="icon fa-quora"><span class="label">Quora</span></a></li> 
-
+								<li><a href="https://www.quora.com/profile/Dheeraj-Naidu-12" target="_blank" class="icon fa-quora"><span class="label">Quora</span></a></li> 
+								<li><i class="fa fa-quora" aria-hidden="true"></i><span class="label">Quora</span></li>
 							</ul>
 
 						</nav>
