--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<li><a href="https://www.facebook.com/msnvdheeraj" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.linkedin.com/in/dheerajnaidu" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://twitter.com/msnvdheeraj" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> 
-								<li><a href="https://www.quora.com/profile/Dheeraj-Naidu-12" target="_blank" class="icon fa-twitter"><span class="label">Quora</span></a></li> 
+								<li><a href="https://www.quora.com/profile/Dheeraj-Naidu-12" target="_blank" class="icon fa-quora"><span class="label">Quora</span></a></li> 
 							</ul>
 
 						</nav>
