--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 <html>
 	<head>
-		<title>Dheeraj Naidu | MSNV Dheeraj Naidu</title>
+		<title>Dheeraj Naidu</title>
 		<meta charset="utf-8" />
 				<link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
- <meta name="description" content="personal website of Dheeraj Naidu(MSNV Dheeraj Naidu)">
-  <meta name="keywords" content="Dheeraj,Naidu,Dheeraj Naidu,MSNV,MSNV Dheeraj Naidu,Madagala">
+ <meta name="description" content="personal website of Dheeraj Naidu">
+  <meta name="keywords" content="Dheeraj,Naidu,MSNV,Madagala">
   <meta name="author" content="Dheeraj Naidu">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 			<div id="main">
 				<!-- Header -->
 					<header id="header">
-						<h1>MSNV Dheeraj Naidu</h1>
+						<h1>Dheeraj Naidu</h1>
 
 						<!--<p>Developer&nbsp;&bull;&nbsp;Designer</p>-->
 						<p> website work underway, have a good day! </p>
