--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 								<li><a href="https://www.linkedin.com/in/dheerajnaidu" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://twitter.com/dheerajnaidu24" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> 
 								<li><a href="https://www.facebook.com/dheerajnaidu24" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://soundcloud.com/dheerajnaidu" target="_blank"  class="icon fa-soundcloud"><span class="label">SoundCloud</span></a></li>
+
 
 							</ul>
 
