--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 								<li><a href="https://www.facebook.com/dheerajnaidu24" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/dheerajnaidu2/" target="_blank"  class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://soundcloud.com/dheerajnaidu" target="_blank"  class="icon fa-soundcloud"><span class="label">SoundCloud</span></a></li>
+								<li><a href="https://about.me/dheerajnaidu" target="_blank"  class="icon fa-square"><span class="label">about.me</span></a></li>
+
 
 
 							</ul>
