--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <html>
 	<head>
+		
+<script src="https://use.fontawesome.com/d79559b981.js"></script>
+
 		<title>Dheeraj Naidu</title>
 		<meta charset="utf-8" />
 				<link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
@@ -29,7 +32,7 @@
 							<ul>
 								<li><a href="https://www.linkedin.com/in/dheerajnaidu" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://twitter.com/dheerajnaidu24" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> 
-								<li><a href="https://www.quora.com/dheerajnaidu" target="_blank"  class="icon fa-circle"><span class="label">Quora</span></a></li>
+								<li><a href="https://www.quora.com/dheerajnaidu" target="_blank"  class="icon fa-quora"><span class="label">Quora</span></a></li>
 								<li><a href="https://medium.com/@dheerajnaidu" target="_blank"  class="icon fa-medium"><span class="label">Medium</span></a></li>
 								<li><a href="https://www.facebook.com/dheerajnaidu24" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/dheerajnaidu2/" target="_blank"  class="icon fa-instagram"><span class="label">Instagram</span></a></li>
