--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			<div id="main">
 				<!-- Header -->
 					<header id="header">
-						<h1>Dheeraj Naidu</h1>
-
+						
+ <a href="https://dheerajnaidu.com/"><h1>Dheeraj Naidu</h1></a> 
 						<!--<p>Developer&nbsp;&bull;&nbsp;Designer</p>-->
 						<p> website work underway, have a good day! </p>
 						<p><b>Connect with Me:</b></p>
