--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<header id="header">
 						
  <a href="https://dheerajnaidu.com/"><h1>Dheeraj Naidu</h1></a> 
-						<!--<p>Developer&nbsp;&bull;&nbsp;Designer</p>-->
+						<p>Designer&nbsp;&bull;&nbsp;Developer</p>
 						<p> website work underway, have a good day! </p>
 						<p><b>Connect with Me:</b></p>
 						<nav>
@@ -49,7 +49,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 
-					<!--	<span class="copyright">&copy; Untitled. Design: <a href=""></a>.</span>-->
+			<span class="copyright">&copy; Dheeraj Naidu. Design: <a href="https://dheerajnaidu.com/">ajlkn</a>.</span>
 					</footer>
 
 			</div>
