--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  <a href="https://dheerajnaidu.com/"><h1>Dheeraj Naidu</h1></a> 
 						<p>Designer&nbsp;&bull;&nbsp;Developer</p>
 						<p> website work underway, have a good day! </p>
-						<p><b>Connect with Me:</b></p>
+						<!--<p><b>Connect with Me:</b></p>-->
 						<nav>
 							<ul>
 								<li><a href="https://www.facebook.com/dheerajnaidu24" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
