--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<header id="header">
 						
  <a href="https://dheerajnaidu.com/"><h1>Dheeraj Naidu</h1></a> 
-						<p>Designer&nbsp;&bull;&nbsp;Developer</p>
+						<p><a href="https://dheerajnaidu.com/">Designer</a>&nbsp;&bull;&nbsp;<a href="https://dheerajnaidu.com/">Developer</a></p>
 						<p> website work underway, have a good day! </p>
 						<!--<p><b>Connect with Me:</b></p>-->
 						<nav>
