--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<nav>
 							<ul>
 								<li><a href="https://www.facebook.com/dheerajnaidu24" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/dheerajnaidu2/" target="_blank"  class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.instagram.com/dheerajnaidu_/" target="_blank"  class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://twitter.com/dheerajnaidu_" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> 
 								<li><a href="https://www.linkedin.com/in/dheerajnaidu" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://www.quora.com/dheerajnaidu" target="_blank"  class="icon fa-quora"><span class="label">Quora</span></a></li>
