--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 					<header id="header">
 						
  <a href="https://dheerajnaidu.com/"><h1>Dheeraj Naidu</h1></a> 
-						<p><a href="https://dheerajnaidu.com/">VIT</a>&nbsp;&bull;&nbsp;<a href="https://dheerajnaidu.com/">CS</a></p>
-						<p> website work underway, have a good day! </p>
+						<p><a href="https://dheerajnaidu.com/"><h2>VIT</h2></a>&nbsp;&bull;&nbsp;<a href="https://dheerajnaidu.com/"><h2>CS</h2></a></p>
+						<h2> website work underway, have a good day! </h2>
 						<!--<p><b>Connect with Me:</b></p>-->
 						<nav>
 							<ul>
@@ -49,7 +49,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 
-			<span class="copyright">&copy; Dheeraj Naidu. Design: <a href="https://dheerajnaidu.com/">ajlkn</a>.</span>
+						<span class="copyright">&copy; <h2>Dheeraj Naidu.</h2> Design: <a href="https://dheerajnaidu.com/"><h2>ajlkn</h2></a>.</span>
 					</footer>
 
 			</div>
