--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<header id="header">
 						
  <a href="https://dheerajnaidu.com/"><h1>Dheeraj Naidu</h1></a> 
-						<p><h2><a href="https://dheerajnaidu.com/">VIT</a></h2>&nbsp;&bull;&nbsp;<h2><a href="https://dheerajnaidu.com/">CS</a></h2></p>
+						<h2><a href="https://dheerajnaidu.com/">VIT</a></h2>&nbsp;&bull;&nbsp;<h2><a href="https://dheerajnaidu.com/">CS</a></h2>
 						<h2> website work underway, have a good day! </h2>
 						<!--<p><b>Connect with Me:</b></p>-->
 						<nav>
