--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<header id="header">
 						
  <a href="https://dheerajnaidu.com/"><h1>Dheeraj Naidu</h1></a> 
-						<h2><a href="https://dheerajnaidu.com/">VIT</a></h2>&nbsp;&bull;&nbsp;<h2><a href="https://dheerajnaidu.com/">CS</a></h2>
+						<p><a href="https://dheerajnaidu.com/">VIT</a>&nbsp;&bull;&nbsp;<a href="https://dheerajnaidu.com/">CS</a></p>
 						<h2> website work underway, have a good day! </h2>
 						<!--<p><b>Connect with Me:</b></p>-->
 						<nav>
@@ -49,7 +49,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 
-						<span class="copyright">&copy; <h2>Dheeraj Naidu.</h2> Design: <a href="https://dheerajnaidu.com/"><h2>ajlkn</h2></a>.</span>
+						<span class="copyright">&copy; Dheeraj Naidu. Design: <a href="https://dheerajnaidu.com/">ajlkn</a>.</span>
 					</footer>
 
 			</div>
