--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 
-						<span class="copyright">&copy; Dheeraj Naidu. Design: <a href="https://dheerajnaidu.com/">ajlkn</a>.</span>
+						<span class="copyright">&copy; Dheeraj Naidu. Design: <a href="https://dheerajnaidu.com/">AJ</a>.</span>
 					</footer>
 
 			</div>
