--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<title>Dheeraj Naidu</title>
 		<meta charset="utf-8" />
 				<link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
- <meta name="description" content="personal website of Dheeraj Naidu">
+ <meta name="description" content="I&#039;m Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket.This is my personal website and blog.">
   <meta name="keywords" content="Dheeraj,Naidu,MSNV,Madagala">
   <meta name="author" content="Dheeraj Naidu">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
