--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML>
-
 <html>
 	<head>
 		
@@ -7,10 +6,28 @@
 
 		<title>Dheeraj Naidu</title>
 		<meta charset="utf-8" />
-				<link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
+<link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
+		<!--
  <meta name="description" content="I&#039;m Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket.This is my personal website and blog.">
   <meta name="keywords" content="Dheeraj,Naidu,MSNV,Madagala">
   <meta name="author" content="Dheeraj Naidu">
+		-->
+		
+<meta name="description" content="I&#039;m Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog."/>
+<link rel="canonical" href="https://www.dheerajnaidu.com/" />
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Dheeraj Naidu" />
+<meta property="og:description" content="I&#039;m Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog." />
+<meta property="og:url" content="https://www.dheerajnaidu.com/" />
+<meta property="og:site_name" content="Dheeraj Naidu" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:description" content="I&#039;m Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog." />
+<meta name="twitter:title" content="Dheeraj Naidu" />
+<script type='application/ld+json'>{"@context":"https://schema.org","@type":"WebSite","@id":"https://www.dheerajnaidu.com/#website","url":"https://www.dheerajnaidu.com/","name":"Dheeraj Naidu","potentialAction":{"@type":"SearchAction","target":"https://www.dheerajnaidu.com/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
+<script type='application/ld+json'>{"@context":"https://schema.org","@type":"Person","url":"https://www.dheerajnaidu.com/","sameAs":[],"@id":"#person","name":"Dheeraj Naidu"}</script>
+		
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
