--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	<head>
 		
 <script src="https://use.fontawesome.com/d79559b981.js"></script>
-
 		<title>Dheeraj Naidu</title>
 		<meta charset="utf-8" />
 <link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
@@ -12,7 +11,8 @@
   <meta name="keywords" content="Dheeraj,Naidu,MSNV,Madagala">
   <meta name="author" content="Dheeraj Naidu">
 		-->
-		
+		<meta name="p:domain_verify" content="af5750d83235b08c60cbf6207ac2c966"/>
+
 <meta name="description" content="I&#039;m Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog."/>
 <link rel="canonical" href="https://www.dheerajnaidu.com/" />
 <meta property="og:locale" content="en_US" />
