--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 	<head>
 		
 <script src="https://use.fontawesome.com/d79559b981.js"></script>
+		
+<script src="https://use.fontawesome.com/caa155a31d.js"></script>
+
 		<title>Dheeraj Naidu</title>
 		<meta charset="utf-8" />
 <link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
