--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 <link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
 		<!--
- <meta name="description" content="I&#039;m Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket.This is my personal website and blog.">
+ <meta name="description" content="I&#039;m Dheeraj Naidu, a Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket.This is my personal website and blog.">
   <meta name="keywords" content="Dheeraj,Naidu,MSNV,Madagala">
   <meta name="author" content="Dheeraj Naidu">
 		-->
