--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
 		<!--
  <meta name="description" content="I&#039;m Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket.This is my personal website and blog.">
-  <meta name="keywords" content="Dheeraj,Naidu,MSNV,Madagala">
-  <meta name="author" content="Dheeraj Naidu">
-		-->
+  -->
+  <meta name="keywords" content="dheeraj naidu, dheeraj, naidu, dheerajnaidu">
+  <meta name="author" content="dheeraj naidu">
+		
 		<meta name="p:domain_verify" content="af5750d83235b08c60cbf6207ac2c966"/>
 
 <meta name="description" content="I&#039;m Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog."/>
