--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<li><a href="https://soundcloud.com/dheerajnaidu" target="_blank"  class="icon fa-soundcloud"><span class="label">SoundCloud</span></a></li>
 								<li><a href="https://www.flickr.com/photos/dheerajnaidu/" target="_blank"  class="icon fa-flickr"><span class="label">Flickr</span></a></li>
 								<li><a href="https://about.me/dheerajnaidu" target="_blank"  class="icon fa-square"><span class="label">about.me</span></a></li>
-								<li><a href="https://in.pinterest.com/dheerajnaidu2/" target="_blank"  class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+								<li><a href="https://in.pinterest.com/dheerajnaidu_/" target="_blank"  class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
 
 
 
