--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							</ul>
 
 						</nav>
-						
+						<div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="dheerajnaidu"><a class="LI-simple-link" href='https://in.linkedin.com/in/dheerajnaidu?trk=profile-badge'>Dheeraj Naidu</a></div>
 					</header>
 				<!-- Footer -->
 					<footer id="footer">
