--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 								<li><a href="https://www.facebook.com/madagaladheeraj" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/madagaladheeraj/" target="_blank"  class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://twitter.com/madagaladheeraj" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> 
-								<li><a href="https://www.linkedin.com/in/dheerajnaidu" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-								<li><a href="https://www.quora.com/dheerajnaidu" target="_blank"  class="icon fa-quora"><span class="label">Quora</span></a></li>
-								<li><a href="https://medium.com/@dheerajnaidu" target="_blank"  class="icon fa-medium"><span class="label">Medium</span></a></li>
-								<li><a href="https://soundcloud.com/dheerajnaidu" target="_blank"  class="icon fa-soundcloud"><span class="label">SoundCloud</span></a></li>
-								<li><a href="https://about.me/dheerajnaidu" target="_blank"  class="icon fa-square"><span class="label">about.me</span></a></li>
+								<li><a href="https://www.linkedin.com/in/madagaladheeraj" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://www.quora.com/madagaladheeraj" target="_blank"  class="icon fa-quora"><span class="label">Quora</span></a></li>
+								<li><a href="https://medium.com/madagaladheeraj" target="_blank"  class="icon fa-medium"><span class="label">Medium</span></a></li>
+								<li><a href="https://soundcloud.com/madagaladheeraj" target="_blank"  class="icon fa-soundcloud"><span class="label">SoundCloud</span></a></li>
+								<li><a href="https://about.me/madagaladheeraj" target="_blank"  class="icon fa-square"><span class="label">about.me</span></a></li>
 
 
 
