--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
 		
 <script src="https://use.fontawesome.com/caa155a31d.js"></script>
 
-		<title>Dheeraj Naidu</title>
+		<title>Dheeraj Madagala</title>
 		<meta charset="utf-8" />
 <link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
 		<!--
- <meta name="description" content="I&#039;m Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket.This is my personal website and blog.">
+ <meta name="description" content="I&#039;m Dheeraj Madagala, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket.This is my personal website and blog.">
   -->
-  <meta name="keywords" content="dheeraj naidu, dheeraj, naidu, dheerajnaidu">
-  <meta name="author" content="dheeraj naidu">
+  <meta name="keywords" content="dheeraj madagala, dheeraj, madagala, dheerajmadagala">
+  <meta name="author" content="dheeraj madagala">
 		
 <meta name="p:domain_verify" content="318f8f61279c7735af123058ffe6e0ae"/>
-<meta name="description" content="I&#039;m Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog."/>
+<meta name="description" content="I&#039;m Dheeraj Madagala, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog."/>
 <link rel="canonical" href="https://www.dheerajnaidu.com/" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Dheeraj Naidu" />
-<meta property="og:description" content="I&#039;m Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog." />
+<meta property="og:title" content="Dheeraj Madagala" />
+<meta property="og:description" content="I&#039;m Dheeraj Madagala, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog." />
 <meta property="og:url" content="https://www.dheerajnaidu.com/" />
-<meta property="og:site_name" content="Dheeraj Naidu" />
+<meta property="og:site_name" content="Dheeraj Madagala" />
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:description" content="I&#039;m Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog." />
-<meta name="twitter:title" content="Dheeraj Naidu" />
-<script type='application/ld+json'>{"@context":"https://schema.org","@type":"WebSite","@id":"https://www.dheerajnaidu.com/#website","url":"https://www.dheerajnaidu.com/","name":"Dheeraj Naidu","potentialAction":{"@type":"SearchAction","target":"https://www.dheerajnaidu.com/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
-<script type='application/ld+json'>{"@context":"https://schema.org","@type":"Person","url":"https://www.dheerajnaidu.com/","sameAs":[],"@id":"#person","name":"Dheeraj Naidu"}</script>
+<meta name="twitter:description" content="I&#039;m Dheeraj Madagala, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog." />
+<meta name="twitter:title" content="Dheeraj Madagala" />
+<script type='application/ld+json'>{"@context":"https://schema.org","@type":"WebSite","@id":"https://www.dheerajnaidu.com/#website","url":"https://www.dheerajnaidu.com/","name":"Dheeraj Madagala","potentialAction":{"@type":"SearchAction","target":"https://www.dheerajnaidu.com/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
+<script type='application/ld+json'>{"@context":"https://schema.org","@type":"Person","url":"https://www.dheerajnaidu.com/","sameAs":[],"@id":"#person","name":"Dheeraj Madagala"}</script>
 		
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -44,7 +44,7 @@
 				<!-- Header -->
 					<header id="header">
 						
- <a href="https://dheerajnaidu.com/"><h1>Dheeraj Naidu</h1></a> 
+ <a href="https://dheerajnaidu.com/"><h1>Dheeraj Madagala</h1></a> 
 						<p><a href="https://dheerajnaidu.com/">VIT</a>&nbsp;&bull;&nbsp;<a href="https://dheerajnaidu.com/">CS</a></p>
 						<h2> website work underway, have a good day! </h2>
 						<!--<p><b>Connect with Me:</b></p>-->
@@ -69,7 +69,7 @@
 					<footer id="footer">
 
 
-						<span class="copyright">&copy; Dheeraj Naidu. Design: <a href="https://dheerajnaidu.com/">AJ</a>.</span>
+						<span class="copyright">&copy; Dheeraj Madagala. Design: <a href="https://dheerajnaidu.com/">AJ</a>.</span>
 					</footer>
 
 			</div>
