--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<li><a href="https://twitter.com/dheerajmadagala" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> 
 								<li><a href="https://www.linkedin.com/in/dheerajmadagala" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://www.quora.com/profile/Dheeraj-Madagala" target="_blank"  class="icon fa-quora"><span class="label">Quora</span></a></li>
-								<li><a href="https://medium.com/dheerajmadagala" target="_blank"  class="icon fa-medium"><span class="label">Medium</span></a></li>
+								<li><a href="https://medium.com/@dheerajmadagala" target="_blank"  class="icon fa-medium"><span class="label">Medium</span></a></li>
 								<li><a href="https://soundcloud.com/dheerajmadagala" target="_blank"  class="icon fa-soundcloud"><span class="label">SoundCloud</span></a></li>
 
 
