--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 		<!--
  <meta name="description" content="I&#039;m Dheeraj Madagala, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket.This is my personal website and blog.">
   -->
-  <meta name="keywords" content="dheeraj madagala, dheeraj, madagala, dheerajmadagala">
+  <meta name="keywords" content="dheeraj madagala, dheeraj, madagala, dheerajmadagala, MSNV Dheeraj Naidu">
   <meta name="author" content="dheeraj madagala">
 		
 <meta name="p:domain_verify" content="318f8f61279c7735af123058ffe6e0ae"/>
-<meta name="description" content="I&#039;m Dheeraj Madagala, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog."/>
+<meta name="description" content="I&#039;m Dheeraj Madagala (aka MSNV Dheeraj Naidu), an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog."/>
 <link rel="canonical" href="https://www.dheerajnaidu.com/" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Dheeraj Madagala" />
-<meta property="og:description" content="I&#039;m Dheeraj Madagala, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog." />
+<meta property="og:description" content="I&#039;m Dheeraj Madagala (aka MSNV Dheeraj Naidu), an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog." />
 <meta property="og:url" content="https://www.dheerajnaidu.com/" />
 <meta property="og:site_name" content="Dheeraj Madagala" />
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:description" content="I&#039;m Dheeraj Madagala, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog." />
+<meta name="twitter:description" content="I&#039;m Dheeraj Madagala (aka MSNV Dheeraj Naidu), an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog." />
 <meta name="twitter:title" content="Dheeraj Madagala" />
 <script type='application/ld+json'>{"@context":"https://schema.org","@type":"WebSite","@id":"https://www.dheerajnaidu.com/#website","url":"https://www.dheerajnaidu.com/","name":"Dheeraj Madagala","potentialAction":{"@type":"SearchAction","target":"https://www.dheerajnaidu.com/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
 <script type='application/ld+json'>{"@context":"https://schema.org","@type":"Person","url":"https://www.dheerajnaidu.com/","sameAs":[],"@id":"#person","name":"Dheeraj Madagala"}</script>
@@ -46,6 +46,7 @@
 						
  <a href="https://dheerajnaidu.com/"><h1>Dheeraj Madagala</h1></a> 
 						<p><a href="https://dheerajnaidu.com/">VIT</a>&nbsp;&bull;&nbsp;<a href="https://dheerajnaidu.com/">CS</a></p>
+						<p> aka <a href="https://dheerajnaidu.com/">MSNV Dheeraj Naidu</a> </p>
 						<h2> website work underway, have a good day! </h2>
 						<!--<p><b>Connect with Me:</b></p>-->
 						<nav>
