--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		
 <script src="https://use.fontawesome.com/caa155a31d.js"></script>
 
-		<title>Dheeraj Madagala</title>
+		<title>Dheeraj Madagala (MSNV Dheeraj Naidu)</title>
 		<meta charset="utf-8" />
 <link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
 		<!--
