--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<header id="header">
 						
  <a href="https://dheerajnaidu.com/"><h1>Dheeraj Madagala</h1></a> 
-						<p><a href="https://dheerajnaidu.com/">VIT</a>&nbsp;&bull;&nbsp;<a href="https://dheerajnaidu.com/">CS</a></p>
+						<p>VIT&nbsp;&bull;&nbsp;CS</p>
 						<p> aka <a href="https://dheerajnaidu.com/">MSNV Dheeraj Naidu</a> </p>
 						<h2> website work underway, have a good day! </h2>
 						<!--<p><b>Connect with Me:</b></p>-->
@@ -57,7 +57,7 @@
 								<li><a href="https://www.linkedin.com/in/dheerajmadagala" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://www.quora.com/profile/Dheeraj-Madagala" target="_blank"  class="icon fa-quora"><span class="label">Quora</span></a></li>
 								<li><a href="https://medium.com/@dheerajmadagala" target="_blank"  class="icon fa-medium"><span class="label">Medium</span></a></li>
-								<li><a href="https://soundcloud.com/dheerajmadagala" target="_blank"  class="icon fa-soundcloud"><span class="label">SoundCloud</span></a></li>
+								<li><a href="https://www.youtube.com/c/DheerajNaidu" target="_blank"  class="icon fa-youtube"><span class="label">Youtube</span></a></li>
 
 
 							</ul>
