--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<footer id="footer">
 
 
-						<span class="copyright">&copy; Dheeraj Madagala. Design: <a href="https://dheerajnaidu.com/">AJ</a>.</span>
+						<span class="copyright">&copy; Dheeraj Madagala (MSNV Dheeraj Naidu) 2019.</span>
 					</footer>
 
 			</div>
