--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<p>VIT&nbsp;&bull;&nbsp;CS</p>
 						<p> aka MSNV Dheeraj Naidu</p>
 						<h2> website work underway, have a good day! </h2>
-						<!--<p><b>Connect with Me:</b></p>-->
+						<p> <a href="https://www.dheerajmadagala.com/">Dheeraj Madagala's Personal Website</a> </p>
 						<nav>
 							<ul>
 								<li><a href="https://www.facebook.com/dheerajmadagala" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
