--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						
  <a href="https://dheerajnaidu.com/"><h1>Dheeraj Madagala</h1></a> 
 						<p>VIT&nbsp;&bull;&nbsp;CS</p>
-						<p> aka MSNV Dheeraj Naidu</p>
+						<p> MSNV Dheeraj Naidu</p>
 						<h2> website work underway, have a good day! </h2>
 						<p> <a href="https://www.dheerajmadagala.com/" target="_blank">Dheeraj Madagala</a> </p>
 						<nav>
