--- a/index.html
+++ b/index.html
@@ -44,30 +44,30 @@
 				<!-- Header -->
 					<header id="header">
 						
- <a href="https://dheerajnaidu.com/"><h1>Dheeraj Madagala</h1></a> 
-						<p> MSNV Dheeraj Naidu</p>
-						<h2> website work underway, have a good day! </h2>
-						<p> <a href="https://www.dheerajmadagala.com/" target="_blank">Dheeraj Madagala</a> </p>
+ <h1>MSNV Dheeraj Naidu</h1>
+						
+						<!--<h2> website work underway, have a good day! </h2>
+						<p> <a href="" target="_blank"></a> </p>
 						<nav>
 							<ul>
-								<li><a href="https://www.facebook.com/dheerajmadagala" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/dheerajmadagala/" target="_blank"  class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://twitter.com/dheerajmadagala" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> 
-								<li><a href="https://www.linkedin.com/in/dheerajmadagala" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-								<li><a href="https://www.quora.com/profile/Dheeraj-Madagala" target="_blank"  class="icon fa-quora"><span class="label">Quora</span></a></li>
-								<li><a href="https://medium.com/@dheerajmadagala" target="_blank"  class="icon fa-medium"><span class="label">Medium</span></a></li>
-								<li><a href="https://www.youtube.com/c/DheerajNaidu" target="_blank"  class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+								<li><a href="https://www.facebook.com/" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/" target="_blank"  class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://twitter.com" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> 
+								<li><a href="https://www.linkedin.com/in/" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://www.quora.com/profile/" target="_blank"  class="icon fa-quora"><span class="label">Quora</span></a></li>
+								<li><a href="https://medium.com/@" target="_blank"  class="icon fa-medium"><span class="label">Medium</span></a></li>
+								<li><a href="https://www.youtube.com/c/" target="_blank"  class="icon fa-youtube"><span class="label">Youtube</span></a></li>
 
 
 							</ul>
-
+-->
 						</nav>
 					</header>
 				<!-- Footer -->
 					<footer id="footer">
 
 
-						<span class="copyright">&copy; Dheeraj Madagala (MSNV Dheeraj Naidu) 2019.</span>
+						<span class="copyright">&copy; MSNV Dheeraj Naidu, 2019.</span>
 					</footer>
 
 			</div>
