--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
  <h1>MSNV Dheeraj Naidu</h1>
 						
 						<!--<h2> website work underway, have a good day! </h2>
-						<p> <a href="" target="_blank"></a> </p>
+						<p> <a href="" target="_blank"></a> </p>-->
 						<nav>
 							<ul>
-								<li><a href="https://www.facebook.com/" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/" target="_blank"  class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://twitter.com" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> 
-								<li><a href="https://www.linkedin.com/in/" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<!--<li><a href="https://www.facebook.com/" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>-->
+								<li><a href="https://www.instagram.com/msnvdheeraj" target="_blank"  class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://twitter.com/msnvdheeraj" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li> 
+								<!--<li><a href="https://www.linkedin.com/in/" target="_blank"  class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://www.quora.com/profile/" target="_blank"  class="icon fa-quora"><span class="label">Quora</span></a></li>
 								<li><a href="https://medium.com/@" target="_blank"  class="icon fa-medium"><span class="label">Medium</span></a></li>
-								<li><a href="https://www.youtube.com/c/" target="_blank"  class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+								<li><a href="https://www.youtube.com/c/" target="_blank"  class="icon fa-youtube"><span class="label">Youtube</span></a></li>-->
 
 
 							</ul>
--->
+
 						</nav>
 					</header>
 				<!-- Footer -->
