--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 		<meta charset="utf-8" />
 <link rel='shortcut icon' type='image/x-icon' href='favicon.jpg' />
 		<!--
- <meta name="description" content="I&#039;m Dheeraj Madagala, an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket.This is my personal website and blog.">
+ <meta name="description" content="I&#039;m MSNV Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology and Music.">
   -->
-  <meta name="keywords" content="dheeraj madagala, dheeraj, madagala, dheerajmadagala, MSNV Dheeraj Naidu">
-  <meta name="author" content="dheeraj madagala">
+  <meta name="keywords" content="MSNV Dheeraj Naidu">
+  <meta name="author" content="MSNV Dheeraj Naidu">
 		
 <meta name="p:domain_verify" content="318f8f61279c7735af123058ffe6e0ae"/>
-<meta name="description" content="I&#039;m Dheeraj Madagala (aka MSNV Dheeraj Naidu), an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog."/>
+<meta name="description" content="I&#039;m MSNV Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology and Music."/>
 <link rel="canonical" href="https://www.dheerajnaidu.com/" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Dheeraj Madagala" />
-<meta property="og:description" content="I&#039;m Dheeraj Madagala (aka MSNV Dheeraj Naidu), an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog." />
+<meta property="og:title" content="MSNV Dheeraj Naidu" />
+<meta property="og:description" content="I&#039;m MSNV Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology and Music." />
 <meta property="og:url" content="https://www.dheerajnaidu.com/" />
-<meta property="og:site_name" content="Dheeraj Madagala" />
+<meta property="og:site_name" content="MSNV Dheeraj Naidu" />
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:description" content="I&#039;m Dheeraj Madagala (aka MSNV Dheeraj Naidu), an Computer Science Engineer. I'm passionate about Technology, Music &amp; Cricket. This is my personal website and blog." />
-<meta name="twitter:title" content="Dheeraj Madagala" />
-<script type='application/ld+json'>{"@context":"https://schema.org","@type":"WebSite","@id":"https://www.dheerajnaidu.com/#website","url":"https://www.dheerajnaidu.com/","name":"Dheeraj Madagala","potentialAction":{"@type":"SearchAction","target":"https://www.dheerajnaidu.com/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
-<script type='application/ld+json'>{"@context":"https://schema.org","@type":"Person","url":"https://www.dheerajnaidu.com/","sameAs":[],"@id":"#person","name":"Dheeraj Madagala"}</script>
+<meta name="twitter:description" content="I&#039;m MSNV Dheeraj Naidu, an Computer Science Engineer. I'm passionate about Technology and Music." />
+<meta name="twitter:title" content="MSNV Dheeraj Naidu" />
+<script type='application/ld+json'>{"@context":"https://schema.org","@type":"WebSite","@id":"https://www.dheerajnaidu.com/#website","url":"https://www.dheerajnaidu.com/","name":"MSNV Dheeraj Naidu","potentialAction":{"@type":"SearchAction","target":"https://www.dheerajnaidu.com/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
+<script type='application/ld+json'>{"@context":"https://schema.org","@type":"Person","url":"https://www.dheerajnaidu.com/","sameAs":[],"@id":"#person","name":"MSNV Dheeraj Naidu"}</script>
 		
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
